# lab06

./: README.md
.github/workflows/: update CPack.yml
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt  CPackConfig.cmake
solver_lib/: CMakeLists.txt
