cmake_minimum_required(VERSION 3.4)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

project(equation)

include_directories("../formatter_ex_lib/")
include_directories("../solver_lib/")

add_executable(equation equation.cpp)

add_subdirectory("../formatter_ex_lib/" formatter_ex_lib)
add_subdirectory("../solver_lib/" solver_lib)

target_link_libraries(equation formatter_ex_lib)
target_link_libraries(equation solver_lib)

set(CPACK_PROJECT_NAME solver_application)
set(CPACK_GENERATOR "DragNDrop")

install(TARGETS equation RUNTIME DESTINATION bin)

include(CPackConfig.cmake)